# Architecture_Course_Homework_1

./: CMakeLists.txt  solve.h  tests.h
.github/workflows/: cmake.yml
